examples/diagnostics/expected/1172-diagnostics-extern-symbol-conflict.stderr
error: extern symbol 'getenv' is already bound with a different signature; two views of one C symbol must declare identical types
  --> examples/diagnostics/1172-diagnostics-extern-symbol-conflict.sx:9:61
   |
 9 | getenv_opt :: (name: [:0]u8) -> ?[:0]u8 extern libc "getenv";
   |                                                             ^
